--- a/style.css
+++ b/style.css
@@ -1,16 +1,65 @@
-body, html {
-    height: 100%;
-  }
-  
-  .bg {
-    background-image: url("logoMaior.png");
-  
-    height: 100%;
-  
-    background-color: blue;
-    background-position: center;
-    background-repeat: no-repeat;
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans+Condensed:wght@300;700&display=swap');
+*{
+    font-family: 'Open Sans Condensed', sans-serif;
+    margin:0;
+    padding:0;
+    border:0;
+    
+} 
+body{
+height: 100%;
+width: 100%;
+}
 
-  }
+.titulo-principal{
+  color: #fff;
+  font-size: 90px;
+}
 
+.efeitoDigita:after{
+  content: '|';
+  margin-left: -2px;
+  opacity: 1;
+  animation: pisca .7s infinite;
+}
+
+@keyframes pisca{
+  0%, 100%{
+      opacity: 1;
+  }
+  50%{
+      opacity: 0;
+  }
+}
+
+#banner{
+  width: 100%;
+  display: flex;
+  height: 100%;
+  background-image: url('./starblack.gif');
+}
+
+#banner div{
+  margin: auto;
+  text-align: center;
+  align-items: center;
+}
+
+#banner div img{
+  animation: scale 7s linear infinite;
+  -webkit-transform:scale(1);
+  -moz-transform:scale(1);
+  -ms-transform:scale(1);
+  -o-transform:scale(1);
+  transform:scale(1);
+}
   
+@keyframes scale {
+  50% {
+    -webkit-transform:scale(1.3);
+    -moz-transform:scale(1.3);
+    -ms-transform:scale(1.3);
+    -o-transform:scale(1.3);
+    transform:scale(1.3);
+  }
+}
