--- a/style.css
+++ b/style.css
@@ -35,8 +35,8 @@ width: 100%;
 #banner{
   width: 100%;
   display: flex;
-  height: 100%;
-  background-image: url('./starblack.gif');
+  height: 1000px;
+  background-image: url('./assets/img/starblack.gif');
 }
 
 #banner div{
@@ -45,7 +45,7 @@ width: 100%;
   align-items: center;
 }
 
-#banner div img{
+.kattyIcon{
   animation: scale 7s linear infinite;
   -webkit-transform:scale(1);
   -moz-transform:scale(1);
@@ -62,4 +62,38 @@ width: 100%;
     -o-transform:scale(1.3);
     transform:scale(1.3);
   }
+}
+
+.setaIcon {
+  cursor: pointer;
+  animation: estica 1s linear infinite;
+}
+
+.boxSeta{
+  margin-top: 100px;
+  height: 150px;
+}
+
+@keyframes estica {
+  0% {
+    height: 100px;
+  }
+  50% {
+    height: 130px;
+  }
+  100%{
+    height: 100px;
+  }
+}
+
+
+footer{
+  text-align: center;
+  color: #fff;
+  background-color: black;
+}
+
+.text{
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
